--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.company</groupId>
-  <artifactId>lfp1</artifactId>
+  <artifactId>lfp-f</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>lfp1</name>
+  <name>lfp-f</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -79,6 +79,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.2.0</version>
           <configuration>
              <source>1.7</source>
              <maxmemory>512</maxmemory>
